--- a/front-end/src/components/Wilder/Wilder.module.css
+++ b/front-end/src/components/Wilder/Wilder.module.css
@@ -70,3 +70,12 @@
    width: 20px;
    margin: 2px;
 }
+
+.button {
+   display: flex;
+   justify-content: center;
+}
+
+.button button {
+   margin-left: 0px;
+}
