--- a/front-end/src/components/AddWilder/AddWilder.module.css
+++ b/front-end/src/components/AddWilder/AddWilder.module.css
@@ -1,6 +1,5 @@
 input {
    margin: 0px 6px;
-   border: none;
    resize: none;
    overflow: auto;
    outline: none;
@@ -9,6 +8,8 @@ input {
    border: 2px solid #f76c6c8c;
    border-radius: 3px;
    height: 32px;
+   cursor: pointer;
+   text-align: center;
 }
 
 button {
@@ -20,6 +21,7 @@ button {
    font-weight: bold;
    width: 111px;
    margin-left: 17px;
+   cursor: pointer;
 }
 
 form {
@@ -27,4 +29,12 @@ form {
    align-items: center;
    margin: 35px 0px;
    justify-content: center;
+}
+
+.gradeinput {
+   width: 41px;
+}
+
+label {
+   font-weight: bold;
 }
